          E = ellinit([0,-a,1,157*a-27,-90*a-543], nfinit(a^2-a+1));
          lfuninit(E,[0,20,10])[2][6] -> 1 (whereas rootno is -1)
     35- bnrinit(bnf,idealfactor(bnf,1)) -> SEGV [#1890]
BA   36- lfuncreate([1,0,[0],1,1,1,1]) -> SEGV (invalid input)
     37- thue(imaginary quadratic of disc -3f^2, n) could return half-integers
BA   38- [libpari] Z_ZV_mod caused gerepile error

  Added
      1- [libari] ZM_isidentity
      2- [libpari] rename buchnarrow -> bnfnarrow
      3- [libpari] ZX_radical
BA    4- [gmp] support for mpn_divexact_1
BA    5- parallel fflog in characteristic at most 5
BA    6- parallel znlog for large characteristic
      7- [libpari] u_chinese_coprime
BA    8- new GP function elltamagawa
      9- [libpari] RgX_rescale_to_int, RgM_rescale_to_int
BA   10- [libpari] Flx_digits/FlxV_Flx_fromdigits
     11- new argument (multiple derivation) in GP function derivnum
     12- allow matrix(n) for n x n matrices
     13- new GP functions nfeltsign, nfeltembed
HC   14- new GP functions sumnumap, sumnumapinit (Abel-Plana summation)
HC   15- new GP functions zetamultall, zetamultconvert
     16- allow t_VECSMALL for vecsort [already there but undocumented] and
         vecsearch [already there but prevented by a typo]
CG   17- new GP function matpermanent [#1860]
     18- [libpari] hammingl, RgM_is_QM, vecsmall_prod, zm_permanent,
         ZM_permanent
     19- lfuncreate: no longer assume Ramanujan-Petersson, allow specifying
         an arbitrary growth rate a_n = O(n^(k_1 + eps))
BA   20- new GP function vecprod
     21- new GP function znchar
VD   22- new GP functions forperm, forsubset
PB   23- [libpari] F2xqM_F2xqC_gauss F2xqM_F2xqC_invimage F2xqM_gauss F2xqM_invimage
         FlxqM_FlxqC_invimage FlxqM_invimage
         FqM_FqC_invimage FqM_invimage
         gen_matcolinvimage gen_matinvimage
         FFM_FFC_invimage FFM_FFC_gauss FFM_gauss FFM_invimage
     24- new GP function polrootsbound