@@ -5,6 +5,7 @@
 -1/7
 -1/7
 []
+"t_INT"
 (x^3 + 1)/(x^10 + 2)
 1/2*x^3 + 1/2
 1/(x + 1)
