@@ -5,6 +5,7 @@ bestappr(Mod(-1/7,100), 6)
 bestappr(Mod(-1/7,100), 7)
 bestappr(-1/7 + O(5^10))
 bestappr(-1/7 + O(5^10), 6)
+type( bestappr(1+0.*I) )
 
 bestapprPade((x^3+1)/(x^10+2))
 bestapprPade((x^3+1)/(x^10+2), 4)
